--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -24,8 +24,10 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+        <!-- Menu -->
         <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Menu" Background="#0d15b5"/>
 
+        <!-- Player Stats -->
         <Grid Grid.Row="1" Grid.Column="0" Background="Aquamarine">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -56,6 +58,7 @@
             <Label Grid.Row="5" Grid.Column="1" Content="{Binding CurrentPlayer.Level}"/>
         </Grid>
 
+        <!-- Game Play -->
         <Grid Grid.Row="1" Grid.Column="1" Background="#80c4ad" >
 
             <Grid.RowDefinitions>
@@ -68,6 +71,7 @@
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
 
+            <!-- Location Info -->
             <Border Grid.Row="0" Grid.Column="1" BorderBrush="Gainsboro" BorderThickness="1">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -95,6 +99,42 @@
                 
             </Border>
 
+            <!-- Monster Info -->
+            <Border Grid.Row="1" Grid.Column="1"
+                    BorderBrush = "Gainsboro"
+                    BorderThickness = "1">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Grid.Row="0"
+                               HorizontalAlignment="Center"
+                               Height="Auto" 
+                               Text="{Binding CurrentMonster.Name}"/>
+                    <Image Grid.Row="1"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Height="125"
+                           Width="125"
+                           Source="{Binding CurrentMonster.ImageName}"/>
+
+                    <StackPanel Grid.Row="2"
+                                Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
+                                HorizontalAlignment="Center"
+                                Orientation="Horizontal">
+                        <TextBlock>Current Hit Point :
+                        </TextBlock>
+                        <TextBlock Text="{Binding CurrentMonster.HitPoints}"/>
+
+                    </StackPanel>
+
+
+                </Grid>
+                
+            </Border>
         </Grid> 
 
         
